Added files for DEV-2